<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ROSsible</string>
    <string name="action_settings">Settings</string>
    <string name="searching">Searching....</string>
    <string name="Rssi">RSSI</string>
    <string name="rssiValue">---</string>
    <string name="digitalOut">Digital Out</string>
    <string name="digitalIn">Digital In</string>
    <string name="Pin">Pin</string>
    <string name="pinValue4">[ 2 ]</string>
    <string name="pinValue5">[ A4 ]</string>
    <string name="pinValue6">[ 6 ]</string>
    <string name="pinValue7">[ 5 ]</string>
    <string name="pinValueA5">[ A5 ]</string>
    <string name="write">write</string>
    <string name="read">read</string>
    <string name="PWM">PWM</string>
    <string name="servobar">Orientation</string>
    <string name="Servo">Servo</string>
    <string name="motSpeed">Speed</string>
    <string name="AnalogIn">Analog In</string>
    <string name="AIText">----</string>
    <string name="connect">Connect</string>
    <string name="loading">Refreshing......</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="set">Set</string>
    <string name="paused">Paused</string>
    <string name="spin">Spin</string>

</resources>